--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                </li>
                
                <!-- SLIDE 3 -->
-               <li data-transition="fade" data-slotamount="7" data-masterspeed="2000" data-thumb="img/backgrounds/bg-2.jpg" data-delay="10000"  data-saveperformance="on" data-title="Creative Coders">
+               <li data-transition="fade" data-slotamount="7" data-masterspeed="2000" data-thumb="img/backgrounds/bg-2.jpg" data-delay="10000"  data-saveperformance="on" data-title=" ">
                   <img src="img/backgrounds/bg-2.jpg" alt="slidebg1" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                   
                   <!-- Home Heading -->
