--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                   <i class="icon-support back-icon"></i>
                </div>
                <div class="feature-info">
-                  <h4>quizes of various popular genres </h4>
+                  <h4>quizzes of various popular genres </h4>
                   <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
                </div>
             </div>
