--- a/index.html
+++ b/index.html
@@ -944,12 +944,8 @@
                <br>
                <h4> Contact Us : </h4>
                <address>
-               <abbr title="Phone">
-               <strong> Phone </strong>
-               </abbr> : 7682956963 , 8763864800<br>
-               <abbr title="Email">
-               <strong>Email </strong>
-               </abbr> : quizzine.vssut@gmail.com
+                <h5>Phone :</h5> 7682956963 , 8763864800<br>
+               <h5>Email :</h5> quizzine.vssut@gmail.com
                </address>
             </div>
          </div>
