--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
             </div>
             <div class="col-md-4 col-sm-12 feature-column">
                <div class="feature-icon">
-                  <i class="icon-lock-open size-2x highlight"></i>
-                  <i class="icon-lock-open back-icon"></i>
+                  <i class="icon-envelope size-2x highlight"></i>
+                  <i class="icon-envelope back-icon"></i>
                </div>
                <div class="feature-info">
                   <h4>informative newsletters</h4>
@@ -346,8 +346,8 @@
             </div>
             <div class="col-md-4 col-sm-12 feature-column">
                <div class="feature-icon">
-                  <i class="icon-support size-2x highlight"></i>
-                  <i class="icon-support back-icon"></i>
+                  <i class="icon-question size-2x highlight"></i>
+                  <i class="icon-question back-icon"></i>
                </div>
                <div class="feature-info">
                   <h4>quizzes of various popular genres </h4>
@@ -365,7 +365,7 @@
          <div class="row">
             <div class="col-md-6 text-left about-text">
                <h3 class="wow fadeInUp">Our Story </h3>
-               <p class="wow fadeInUp">Quizzine is the official quiz club of VSSUT, Burla. Founded in 2016 by the quiz enthusiasts of the university. The club is counted among the leading quiz clubs in all over Odisha.
+               <p>Quizzine is the official quiz club of VSSUT, Burla. Founded in 2016 by the quiz enthusiasts of the university. The club is counted among the leading quiz clubs in all over Odisha.
                    <br>
                   Quizzine organises various quizzing events and competitions throughout the year. The club prioritises an all round exposure of young minds to technical and general field of knowledge in the form of quizzing to encourage competitiveness and social awareness.</p>
                <p class="wow fadeInUp">
