--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                </div>
                <div class="feature-info">
                   <h4>large range of trivias </h4>
-                  <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
+                  <p class="feature-description">You know why and how it happened? We do!</p>
                </div>
             </div>
             <div class="col-md-4 col-sm-12 feature-column">
@@ -309,7 +309,7 @@
                </div>
                <div class="feature-info">
                   <h4>informative newsletters</h4>
-                  <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
+                  <p class="feature-description">News & facts provided to subscribers via emails.</p>
                </div>
             </div>
             <div class="col-md-4 col-sm-12 feature-column">
@@ -319,7 +319,7 @@
                </div>
                <div class="feature-info">
                   <h4>fun and interesting</h4>
-                  <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
+                  <p class="feature-description"> All the important information and interesting facts provided to you through emails.</p>
                </div>
             </div>
          </div>
@@ -331,7 +331,7 @@
                </div>
                <div class="feature-info">
                   <h4>Flexes your brain</h4>
-                  <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
+                  <p class="feature-description">Improves critical and logarithmic thinking while testing knowledge. Don't believe? Try it!</p>
                </div>
             </div>
             <div class="col-md-4 col-sm-12 feature-column">
@@ -341,7 +341,7 @@
                </div>
                <div class="feature-info">
                   <h4>an easy to use  platform</h4>
-                  <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
+                  <p class="feature-description">Simple enough for even kids to use it. No exaggeration.</p>
                </div>
             </div>
             <div class="col-md-4 col-sm-12 feature-column">
@@ -351,7 +351,7 @@
                </div>
                <div class="feature-info">
                   <h4>quizzes of various popular genres </h4>
-                  <p class="feature-description">Vivamus molestie phasellus enim sed orci eu pharetra. Donec posuere nunc vitae tortor sagittis feugiat in non massa.</p>
+                  <p class="feature-description">From Marvel to DC, from world wars to current trend, all kind of facts under one hood.</p>
                </div>
             </div>
          </div>
